# pydantic-pandas

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
pydantic_pandas/: __init__.py
tests/: test_serialize.py
