[project]
name = "pydantic-pandas"
version = "0.0.1"
requires-python = ">=3.11"
license = { text = "MIT" }
description = "pandas DataFrames in pydantic models"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Sergei Beilin", email = "sergei.beilin@fluentic.dev" },
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
